# ush

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ush_test.ush  ushc.c
pkg/: DESCR
ush/: CMakeLists.txt  base.c  config.h  lists.c  numbers.c  parser.c  term.c  ush-low.h  ush.h
ush/lang/: block.c  break.c  cat.c  cmd.c  continue.c  echo.c  equal.c  error.c  eval.c  exec.c  exists.c  exit.c  expand.c  for.c  foreach.c  if.c  lang.c  lang.h  proc.c  seq.c  set.c  while.c
